# coffee-works

./: .gitignore  Cargo.toml  build.rs  coffee-esp32s3.x  coffee-linkall.x  coffee-rodata.x  rust-toolchain.toml
.cargo/: config.toml
assets/: standby.rgb565
src/: automation.rs  buzzer.rs  display.rs  encoder.rs  group_heater.rs  heater.rs  input.rs  main.rs  pressure.rs  pump.rs  settings.rs  tank.rs  temperature.rs  tft.rs  valve.rs  water.rs
