[package]
name = "coffee-works"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.23.1", features = ["esp32s3"] }
esp-backtrace = { version = "0.15.0", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.13.1", features = ["esp32s3", "auto"] }
esp-bootloader-esp-idf = "=0.1.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
ads1x1x = "0.3.0"
nb = "1.1.0"
heapless = "0.8.0"
mipidsi = { version = "0.10.0", default-features = false }
embedded-hal-bus = "0.3.0"
embedded-storage = "0.3.1"
esp-storage = { version = "0.5.0", features = ["esp32s3", "nor-flash"] }

[profile.dev.package.esp-storage]
opt-level = 3
